fixed spacing when clicking on link

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ h1 {
 
 h2 {
     padding-top: 1em;
+    padding-bottom: 0;
+    margin-bottom: 0;
     margin-left: 1em;
 }
 
@@ -18,7 +20,9 @@ h2 {
 }
 
 h3 {
-    margin-left: 1.4em
+    margin-left: 1.4em;
+    padding-top: 2.3em;
+    margin-top: -1.0em;
 }
 
 body {
